--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   cloud_firestore: ^5.4.0
   url_launcher: ^6.2.5
 
+  fl_chart: ^0.68.0
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
