--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   url_launcher: ^6.2.5
 
   fl_chart: ^0.68.0
+  google_fonts: ^8.0.1
+
+  #http: ^0.13.6 
 
 
 dev_dependencies:
@@ -38,3 +41,4 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/maps/
