--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,8 @@ dependencies:
   fl_chart: ^0.68.0
   google_fonts: ^8.0.1
 
-  #http: ^0.13.6 
+  http: ^1.1.0
+  intl: ^0.20.2
 
 
 dev_dependencies:
